# sb5s

./: Cargo.toml
.github/workflows/: main.yml
core/: Cargo.toml
core/src/: api.rs  core.rs  domain.rs  infrastructure.rs  lib.rs  repo.rs
core/src/api/: location_api.rs  person_api.rs
core/src/domain/: event.rs  service.rs
core/src/domain/entity/: person.rs
core/src/domain/event/: person_event.rs
core/src/domain/service/: person_service.rs
core/src/domain/value_object/: location.rs
core/src/infrastructure/: event_store.rs  projection.rs
core/src/infrastructure/projection/: location_occupancy.rs
core/src/repo/: vec_repository.rs
logic/: Cargo.toml
logic/src/: api.rs  lib.rs
logic/src/api/: event_api.rs
logic/src/domain/entity/: person.rs
logic/src/domain/value_object/: location.rs
logic/src/infrastructure/: event_store.rs
logic/src/repo/: vec_repository.rs
lua_engine/: Cargo.toml  build.rs
lua_engine/src/: docs.rs  lib.rs  lua_client.rs  lua_engine.rs
pixel_ui/: Cargo.toml
pixel_ui/src/: camera.rs  console.rs  debug.rs  input.rs  lua_integration.rs  lua_ui_integration.rs  main.rs  ui.rs
pixel_ui/src/lua_integration/: bindings.rs  components.rs  registry.rs
pixel_ui/src/lua_integration/components/: button.rs  label.rs  panel.rs
pixel_ui/src/ui/: components.rs
scripts/: core_api.d.lua  init.lua
scripts/ui/: debug.lua  init.lua
src/: core.rs  lua_engine.rs  main.rs  ui.rs
ui/: Cargo.toml
ui/src/: main.rs  ui.rs
