[package]
name = "sb5s"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" }
lua_engine = { path = "../lua_engine" }
# maybe it would be good to get rid of this dependency and use a wrapper in lua_engine
mlua = { version = "0.10.3", features = ["luau"] }
egui = "0.31.0"
egui_plot = "0.31.0"
eframe = { version = "0.31.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
    "x11"
] }